--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - libgomp      # [linux]
   host:
     - pyquicksetup
+    - setuptools
     - cython
     - jinja2
     - numpy
