--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url: https://github.com/sdpython/{{ name }}/archive/refs/tags/{{ version }}.tar.gz
   sha256: 81654c7533a647d39ab68f775a1d2516ab8b92a6853af4d6c9d620cb11730125
+  patches:
+    - 0001-Replace-ssize_t-with-std-ptrdiff_t.patch
 
 build:
   number: 1
